# qfortress

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  thirdpartylegalnotices.txt
core/: CMakeLists.txt  cmdline.cc  cmdline.hh  config.cc  config.hh  const.hh  crc64.cc  crc64.hh  cvar.cc  cvar.hh  epoch.cc  epoch.hh  feature.hh.in  logging.cc  logging.hh  pch.hh  setup.cc  setup.hh  strtools.cc  strtools.hh  version.hh.in
game/client/: CMakeLists.txt  main.cc  pch.hh
game/shared/: CMakeLists.txt  class.cc  class.hh  effect.cc  effect.hh  game.cc  game.hh  game_info.cc  game_info.hh  globals.cc  globals.hh  health.cc  health.hh  pch.hh  team.cc  team.hh  transform.cc  transform.hh
maps/: mapfile_test.map
misc/: mapfile_test.map
misc/trenchbroom/: GameConfig.cfg  qfortress.fgd
tools/: CMakeLists.txt
tools/qfmc/: CMakeLists.txt  geometry.cc  geometry.hh  main.cc  mapfile.cc  mapfile.hh  pch.hh  wavefront.cc  wavefront.hh
